Customize CSS styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  color: #3f4850;
+	font-family: 'Gugi', cursive;
+	color: #ffffff;
+	background-color: #00212b;
 }
 
 h1 {
@@ -31,7 +32,7 @@ a {
 
 .search-form button {
   outline: none;
-  background-color: #438bbd;
+  background-color: #00b98b;
   border: none;
   padding: 0px 15px;
   border-radius: 0 0.35em 0.35em 0;
@@ -56,16 +57,17 @@ input {
 
 .main-nav a {
   display: block;
-  background: #438bbd;
+  background: #00b98b;
   border-radius: 3px;
   padding: 5px;
-  color: #fff;
+  color: rgb(255, 255, 255);
 }
 
 .main-nav .active,
 .main-nav a:hover,
 .search-form button:hover {
-  background-color: #275270;
+	background-color: #007054;
+	
 }
 
 .photo-container ul {
